[package]
name = "teahouse"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
basic-pathfinding = { git = "https://github.com/jdm/basic-pathfinding", branch = "iterative" }

[dependencies]
bevy = "0.9"
basic-pathfinding = "0.2"
rand = "0.8"
rand_derive2 = "0.1"

[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"