[package]
name = "teahouse"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
basic-pathfinding = { git = "https://github.com/jdm/basic-pathfinding", branch = "iterative" }

[dependencies]
basic-pathfinding = "0.2"
rand = "0.8"
rand_derive2 = "0.1"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_scene",
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
]

[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = "0.3"